# Simple-Organizer

./: README.md  io.github.nilanshu96.SimpleOrganizer.json  meson.build
data/: io.github.nilanshu96.SimpleOrganizer.appdata.xml.in  io.github.nilanshu96.SimpleOrganizer.desktop.in  io.github.nilanshu96.SimpleOrganizer.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build  simpleorganizer-window.c  simpleorganizer-window.h  simpleorganizer-window.ui  simpleorganizer.gresource.xml
